@@ -17,9 +17,7 @@ public class XirrCalculatorHelper {
 
     // ensures that balance will never be null
     public static Double getBalance(List<UserTransactionDetailsProjection> transactionDetailsProjectionList) {
-        Double balance = transactionDetailsProjectionList
-                .get(transactionDetailsProjectionList.size() - 1)
-                .getBalance();
+        Double balance = transactionDetailsProjectionList.getLast().getBalance();
         if (balance == null) {
             if (transactionDetailsProjectionList.size() < 2) {
                 throw new IllegalArgumentException("Insufficient data to calculate balance.");
